--- a/style.css
+++ b/style.css
@@ -83,8 +83,7 @@ body{
 }
 .content{
 	margin-top:60px;
-	float: left;
-   	width: 50%;
+ 	flex: 50%;
 }
 ol.code{
 	background:rgba(221,221,221,.76);
