--- a/b6/Home/styles.css
+++ b/b6/Home/styles.css
@@ -822,6 +822,9 @@ body {
   margin: 0;
   background-image: url(https://cdn.discordapp.com/attachments/955948542831243294/1004622086792298496/unknown.png) !important;
   background-color: None !important;
+  background-repeat: no-repeat; 
+
+background-size: cover; 
 }
 
 .top {
