make covered background move over the entire DOM

--- a/b6/Home/styles.css
+++ b/b6/Home/styles.css
@@ -823,7 +823,7 @@ body {
   background-image: url(https://cdn.discordapp.com/attachments/955948542831243294/1004622086792298496/unknown.png) !important;
   background-color: None !important;
   background-repeat: no-repeat; 
-
+  width:100% ;
 background-size: cover; 
 }
 
