--- a/b6/Home/styles.css
+++ b/b6/Home/styles.css
@@ -824,7 +824,7 @@ body {
   background-color: None !important;
   background-repeat: no-repeat; 
   width:100% ;
-background-size: cover; 
+background-size: 100%; 
 }
 
 .top {
