--- a/b6/Home/styles.css
+++ b/b6/Home/styles.css
@@ -816,14 +816,16 @@ label.svelte-slqvyn.svelte-slqvyn,
   z-index: 10000;
 }
 
-html,
-body {
+html {
+
 
   margin: 0;
   background-image: url(https://cdn.discordapp.com/attachments/955948542831243294/1004622086792298496/unknown.png) !important;
   background-color: None !important;
   background-repeat: no-repeat; 
   width:100% ;
+  height: 100%;
+  overflow: scroll;
 background-size: 100%; 
 }
 
