Change background color

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 a{
 	text-decoration:none}.float-right{float:right}.postbutton{height:23px;position:relative;top:-3px;border-color:#fff;
-	background-color:#ff5600;
+	background-color: #1C1818;
 	padding:4px;line-height:0;
 	box-shadow:none;
 	margin:0 3px
