--- a/style.css
+++ b/style.css
@@ -143,8 +143,8 @@ button{
   font-family:Card;
   font-size: 1.2em;
   text-align: left;
-  padding-left: 0px
-  padding-right: 20px
+  padding-left: 0px;
+  padding-right: 20px;
   background-color: #F1F1F1;
 }
 .color_orange{
