--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 @font-face{
 	font-family:'Simvoni';
-	src:url(./fonts/Simvoni.ttf) format("truetype")
+	src:url(./fonts/Simvoni-Bold.ttf) format("truetype")
 }
 @font-face{
 	font-family:'Code';
