--- a/style.css
+++ b/style.css
@@ -114,6 +114,12 @@ nav a:hover {
   background-color: #f8a535;
 }
 
+nav img {
+  height: 1em;
+  margin-right: 3px;
+  vertical-align:text-top;
+}
+
 /* Main content styles */
 main {
   padding: 20px;
@@ -218,20 +224,25 @@ html {
   display: none;
   position: absolute;
   right: 0;
-  background-color: #f9f9f9;
+  background-color: #d68b00;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   border-radius: 6px;
+  fill: #d68b00;
 }
 
 .dropdown-content a {
-  color: #d68b00;
+  color: #ffffff;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   width: 100%;
   border-radius: 6px;
+}
+
+.dropdown-content img {
+  fill: #d68b00;
 }
 
 .dropdown-content a:hover {
@@ -320,11 +331,4 @@ html {
 
 .item h3 {
   margin-top: 5px;
-}
-
-.center {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
 }
