--- a/style.css
+++ b/style.css
@@ -276,7 +276,6 @@ html {
   height: 150px;
   object-fit: cover;
   margin-right: 20px;
-  align-self: left;
 }
 
 .team-member-content {
@@ -331,4 +330,44 @@ html {
 
 .item h3 {
   margin-top: 5px;
+}
+
+input[type="text"],
+input[type="password"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  color: #333;
+  width: 250px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease-in-out;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+  outline: none;
+  border-color: #f9a636;
+}
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  background-color: #d68b00;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+button:hover {
+  background-color: #f9a636;
+}
+
+button:active {
+  background-color: #ab7126;
 }
