--- a/style.css
+++ b/style.css
@@ -187,11 +187,11 @@ h1 {
   margin-bottom: 10px;
   text-align: center;
   color: var(--secondary-color);
-  font-family: sans-serif;
+  font-family: simvonib;
 }
 
 h2 {
-  font-family: sans-serif;
+  font-family: simvonib;
 }
 
 p {
