--- a/style.css
+++ b/style.css
@@ -491,6 +491,14 @@ html {
   font-family: 'simvoni', sans-serif;
 }
 
+.tick-flip-panel {
+   background-color: var(--background-color) !important; 
+}
+
+.tick-flip-panel {
+   color: var(--text-color) !important; 
+}
+
 button {
   display: inline-block;
   padding-top: 10px;
