--- a/style.css
+++ b/style.css
@@ -202,6 +202,18 @@ h2 {
   color: var(--text-color);
 }
 
+h3 {
+  font-family: 'simvoni';
+  text-align: left;
+  color: var(--text-color);
+}
+
+h4 {
+  font-family: 'simvoni';
+  text-align: left;
+  color: var(--text-color);
+}
+
 p {
   font-size: 20px;
   line-height: 1.5;
